<resources>
    <string name="app_name">EventApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="look_event">Look Event</string>
    <string name="event_date">Event Date</string>
    <string name="event_title">Event Title</string>
    <string name="favorite_maintance">favorite Maintance</string>
    <string name="finshed_maintance">Finshed Maintance</string>
    <string name="setting_maintance">Setting Maintance</string>
    <string name="favorite_event">Favorite Event !</string>
    <string name="rocomendation_event_for_you">Rocomendation Event For You !</string>
    <string name="event_name">Event Name</string>
    <string name="event_dates">Event Date</string>
    <string name="event_description">Event Description</string>
    <string name="favorite_events">Favorite Events</string>
    <string name="cari_event_yang_finished">Cari Event Yang Finished ...</string>
    <string name="finished_event">Finished Event!</string>
    <string name="events_that_have_ended">Events that have ended</string>
    <string name="setting">Setting</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="daily_reminder_notification">Daily Reminder Notification</string>
    <string name="nama_event">Nama Event</string>
    <string name="tanggal_event">Tanggal Event</string>
    <string name="lihat_detail_events">Lihat Detail Events</string>
    <string name="join_event">Join Event</string>
    <string name="favorite_button">Favorite Button</string>
    <string name="todo">TODO</string>
    <string name="remove_from_favorite">Remove from Favorite</string>
</resources>