<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">


        <ImageView
            android:id="@+id/img_event"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:src="@drawable/waifu" />


        <TextView
            android:id="@+id/tv_event_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/nama_event"

            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_event_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tanggal_event"
            android:textSize="14sp"/>


<LinearLayout
    style="?android:attr/buttonBarStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="16dp">


    <Button
        android:id="@+id/btn_detailevent"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="#41F4A9"
        android:text="@string/lihat_detail_events" />


    <Button
        android:id="@+id/btn_lihatevent"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="12sp"
        android:backgroundTint="#41F4A9"
        android:text="@string/join_event"
        />


</LinearLayout>


        <ImageView
            android:id="@+id/btn_favorite"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/baseline_favorite_border_24"
            android:contentDescription="@string/favorite_button"
            app:tint="@color/black" />

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
