<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/dark_mode"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_daily_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/daily_reminder_notification"
        android:layout_marginTop="16dp"/>


</LinearLayout>
