<?xml version="1.0" encoding="utf-8"?>
<!-- fragment_detail_event.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/black">

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#006200EE"
            android:layout_gravity="center"
            android:layout_marginStart="18dp"
            android:src="@drawable/baseline_arrow_back_24"
            app:tint="@color/white" />
    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
      >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:cardCornerRadius="14dp"
                android:layout_marginTop="24dp"
                app:cardElevation="6dp">

                <ImageView
                    android:id="@+id/img_event"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/waifu"
                    android:contentDescription="@string/event_title" />
            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/tv_event_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_name"
                android:textSize="20sp"
                android:layout_marginTop="16dp" />


            <TextView
                android:id="@+id/tv_event_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_dates"
                android:textSize="16sp"
                android:layout_marginTop="8dp" />


            <TextView
                android:id="@+id/tv_event_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_description"
                android:textSize="14sp"
                android:layout_marginTop="8dp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
